fix nav logo image and nav alignment

--- a/src/app/header/style.scss
+++ b/src/app/header/style.scss
@@ -12,15 +12,26 @@
     border-bottom: $standard-border-width solid $standard-border-color;
     background-color: $base-background-color;
 
-    .nav-logo {
-        width: 150px;
-        max-height: 30px;
-        object-fit: contain;
-    }
+    // .nav-logo {
+    //     width: 150px;
+    //     max-height: 30px;
+    //     object-fit: contain;
+    // }
 }
 
 .nav-logo-container {
     display: flex;
+    align-items: center;
+
+    .nav-logo {
+        width: 150px;
+        max-height: 30px;
+        object-fit: contain;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
 }
 
 .main-header {
@@ -78,14 +89,8 @@
             display: inline-block;
         }
 
-        .nav-logo {
-            width: 180px;
-            padding-right: 60px;
-            object-fit: contain;
-
-            &:hover {
-                cursor: pointer;
-            }
+        .nav-logo-container {
+            width: $sidebar-width + $sidebar-padding;
         }
 
         .nav-header-links {
